--- a/src/style.css
+++ b/src/style.css
@@ -2,9 +2,73 @@ body {
   font-family: "Poppins";
 }
 
-h1 {
-  font-style: normal;
+.container {
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)),
+    url("../images/header.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  text-align: center;
+  padding: 200px;
+}
+
+header h1 {
   font-weight: 700;
-  font-size: 96px;
-  line-height: 144px;
+  font-size: 75px;
+  line-height: 1;
+  margin: 30px 0;
+}
+
+header h2 {
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 1.5;
+  margin: 30px 0;
+}
+
+header h3 {
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 1.5;
+  letter-spacing: 5px;
+  margin: 0;
+}
+
+header a {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.5;
+  padding: 16px 32px;
+  margin-top: 32px;
+  display: inline-block;
+  text-align: center;
+  letter-spacing: 3px;
+  border-radius: 4px;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: white;
+  color: black;
+}
+
+@media (max-width: 900px) {
+  header {
+    padding: 60px 0;
+  }
+
+  header h1 {
+    font-size: 38px;
+  }
+
+  header h2 {
+    font-size: 20px;
+  }
+
+  header h3 {
+    font-size: 12px;
+  }
 }
