--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@ body {
 .grid {
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
-  grid-column-gap: 25px;
+  grid-column-gap: 55px;
 }
 
 section {
@@ -44,7 +44,7 @@ header h2 {
 
 header h3 {
   font-weight: 400;
-  font-size: 24px;
+  font-size: 25px;
   line-height: 1.5;
   letter-spacing: 5px;
   margin: 0;
@@ -77,14 +77,14 @@ footer {
 
 footer h3 {
   font-weight: 700;
-  font-size: 20px;
+  font-size: 19px;
   line-height: 1.5;
   text-decoration: underline;
 }
 
 footer p {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.5;
   opacity: 0.7;
 }
@@ -97,10 +97,12 @@ footer ul {
 footer li {
   margin: 0;
   padding: 0;
+  line-height: 2;
 }
 
 footer a {
   color: white;
+  font-size: 14px;
 }
 
 @media (max-width: 960px) {
