--- a/src/style.css
+++ b/src/style.css
@@ -13,9 +13,23 @@ body {
   grid-column-gap: 55px;
 }
 
+.grid-2-columns {
+  grid-template-columns: 1fr 1fr;
+}
+
+.grid-3-columns {
+  grid-template-columns: 1fr 2fr 2fr;
+}
+
+.main-photo {
+  max-width: 100%;
+  margin-top: 55px;
+}
+
 section {
   max-width: 1200px;
   margin: 0 auto;
+  padding: 100px 0;
 }
 
 header {
@@ -66,13 +80,44 @@ header a {
   color: black;
 }
 
+main {
+  background-color: white;
+}
+
+main h2 {
+  font-weight: 700;
+  font-size: 16px;
+  margin: 0;
+  text-transform: uppercase;
+  line-height: 1.5;
+  letter-spacing: 5px;
+  color: #272044;
+  opacity: 0.3;
+}
+
+main h3 {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.5;
+  color: black;
+  margin: 0;
+}
+
+main p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: black;
+  opacity: 0.6;
+}
+
 footer {
   color: white;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)),
     url("../images/footer-2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 100px;
 }
 
 footer h3 {
@@ -120,5 +165,14 @@ footer a {
 
   header h3 {
     font-size: 12px;
+  }
+
+  .grid {
+    grid-template-columns: 1fr;
+    grid-gap: 25px;
+  }
+
+  section {
+    padding: 30px;
   }
 }
