main: added-three-rescue-cards

--- a/src/style.css
+++ b/src/style.css
@@ -7,9 +7,12 @@ body {
   margin: 0 auto;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .grid {
   display: grid;
-  grid-template-columns: 1fr 2fr 2fr;
   grid-column-gap: 55px;
 }
 
@@ -18,6 +21,10 @@ body {
 }
 
 .grid-3-columns {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.grid-3-columns-footer {
   grid-template-columns: 1fr 2fr 2fr;
 }
 
@@ -26,10 +33,48 @@ body {
   margin-top: 55px;
 }
 
+.drla-rescue,
+.dach-relief,
+.dach-friends {
+  width: 365px;
+  height: 365px;
+}
+
+.rescue-background-section {
+  background: #f8f8f8;
+}
+
+.card {
+  background: white;
+  margin: 30px 0;
+}
+
+.card-body {
+  padding: 30px;
+}
+
+.card-footer {
+  padding: 0 30px 30px;
+}
+
+.button {
+  display: block;
+  color: white;
+  background: black;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 16px;
+}
+
 section {
-  max-width: 1200px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 100px 0;
+  padding: 100px;
 }
 
 header {
@@ -91,13 +136,29 @@ main h2 {
   text-transform: uppercase;
   line-height: 1.5;
   letter-spacing: 5px;
-  color: #272044;
+  color: black;
   opacity: 0.3;
 }
 
 main h3 {
   font-weight: 700;
   font-size: 40px;
+  line-height: 1.5;
+  color: black;
+  margin: 0;
+}
+
+main h4 {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.5;
+  color: black;
+  margin: 0;
+}
+
+main h5 {
+  font-weight: 700;
+  font-size: 13px;
   line-height: 1.5;
   color: black;
   margin: 0;
